# ee-smarthub-client

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: get_hosts.py
scripts/: generate_proto.sh
src/ee_smarthub/: __init__.py  _mqtt.py  _usp.py  client.py  exceptions.py  models.py
src/ee_smarthub/proto/usp/: __init__.py
src/ee_smarthub/proto/usp_record/: __init__.py
tests/: test_client.py  test_mqtt.py  test_usp.py
