[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ee-smarthub"
version = "0.1.0"
description = "Async client for EE SmartHub routers via USP protocol"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "betterproto2>=0.9.1",
    "aiomqtt>=2.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "betterproto2_compiler>=0.9.0",
    "grpcio-tools>=1.76.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ee_smarthub"]

[tool.ruff]
target-version = "py311"
